logs/Slang/generic/typedef/typedef_test_9.sv.log
name: typedef_test_9
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_9.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_9.sv:7:9: error: use of undeclared identifier 'data_t'
typedef data_t my_array_t [k:0][j:0];
        ^~~~~~
